--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   flutter:
     sdk: flutter
   provider: 6.0.3
+  firebase_core: 1.17.1
+  firebase_auth: 3.3.19
   cloud_firestore: 3.1.17
 
 
